Fix issue with map jumping when switch to fixed positioning.  Issue was a change in size in firefox but not in chrome.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -923,7 +923,8 @@ input[type='text']:focus {
   .fixed {
     position: fixed;
     margin-top: -210px;
-    margin-left: -33px;
+    margin-left: 21px;
+    width: 316px;
   }
 
   .relative {
